--- a/GabryDX-API/.classpath
+++ b/GabryDX-API/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="A:/Java/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="A:/Java/joda-time-2.4.jar"/>
-	<classpathentry kind="lib" path="A:/Java/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriele/git/GabryDX-API/GabryDX-API/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriele/git/GabryDX-API/GabryDX-API/lib/joda-time-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gabriele/git/GabryDX-API/GabryDX-API/lib/commons-lang3-3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
